--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <p>Welcome to the chat app</p>
+
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+        let socket = io();
+
+        socket.on('connect', () => {
+            console.log('User connected to server')
+        });
+
+        socket.on('disconnect', () => {
+            console.log('User disconnected from server')
+        });
+    </script>
 </body>
 </html>
